# opengl-quickstart

./: CMakeLists.txt
src/: main.cpp
